--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,170 @@
 /* You can add global styles to this file, and also import other style files */
+
+// @import 'styles/codingbites-theme';
+
+// @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+// @import url('https://www.codingbites.in/blog/wp-includes/css/dashicons.min.css?ver=6.2.2');
+// @import url('https://www.codingbites.in/blog/wp-includes/css/admin-bar.min.css?ver=6.2.2');
+// @import url('https://www.codingbites.in/blog/wp-includes/blocks/navigation/style.min.css?ver=6.2.2');
+// @import url('https://www.codingbites.in/blog/wp-includes/blocks/social-links/style.min.css?ver=6.2.2');
+// @import url('https://www.codingbites.in/blog/wp-content/themes/lemmony/assets/libraries/splide/splide.min.css?ver=4.1.4');
+// @import url('https://www.codingbites.in/blog/wp-content/themes/lemmony/assets/css/styles.css?ver=1.4');
+
+// @import url('https://www.codingbites.in/blog/wp-content/themes/lemmony/assets/fonts/jakarta/PlusJakartaSans-Regular.woff2');
+// @import url('https://www.codingbites.in/blog/wp-content/themes/lemmony/assets/fonts/jakarta/PlusJakartaSans-SemiBold.woff2');
+// @import url('https://www.codingbites.in/blog/wp-content/themes/lemmony/assets/fonts/jakarta/PlusJakartaSans-Bold.woff2');
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+.tutorial_content > *{
+    margin: 1em 0;  
+    line-height: 1.75;
+    word-spacing: 1.6px;
+    font-size: 1.075em;
+  }
+  
+  .tutorial_content .emphasise{
+    background: pink;
+    padding: 0.1em 0.35em;
+    border-radius: 6px;
+  }
+  
+  .tutorial_content .wp-block-code{
+    background: #f1f0f0;
+    padding: 1em;
+    border-radius: 12px;
+    white-space: pre-wrap;
+  }
+  
+  .tutorial_content .has-inline-color{
+    padding: 0.1em 0.35em;
+    border-radius: 6px;
+  }
+  
+  .tutorial_content table{
+      border: 1px solid #cec3c3;
+  }
+  
+  .tutorial_content table td, th{
+      border: 1px solid #cec3c3;
+      padding: 0.25rem 0.75rem;
+  }
+  
+  .tutorial_content h2.wp-block-heading{
+    font-size: 1.45em;
+    font-weight: 600;
+    // margin-left: 0.65em;
+  }
+  
+ .tutorial_content > p > code, .tutorial_content > ul > li > code{
+    background: pink;
+    padding: 0.1em 0.35em;
+    border-radius: 6px;
+  }
+  
+  .tutorial_content > ul > li{
+    list-style: disc;
+    margin: 0 3em;
+  }
+  
+  .tutorial_content > ul > li > a{
+    text-decoration: underline;
+    text-decoration-color: pink;
+    font-weight: 500;
+  }
+
+  .tutorial_content .wp-block-image{
+    max-width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .tutorial_content .wp-block-image > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .tutorial_content {
+    // .wp-block-quote {
+    //     position: relative;
+    //     padding: 1em 2em;
+    //     margin: 2em 0;
+    //     border-left: 4px solid #3498db; /* Change color to suit your theme */
+    //     background-color: #f9f9f9; /* Light grey background */
+    //     font-style: italic;
+    //     font-size: 1.25em;
+    //     color: #333;
+    // }
+    
+    // .wp-block-quote:before {
+    //     content: "\201C"; /* Opening quote */
+    //     position: absolute;
+    //     top: 0;
+    //     left: 10px;
+    //     font-size: 4em;
+    //     color: #3498db; /* Change color to suit your theme */
+    //     line-height: 1;
+    // }
+    
+    // .wp-block-quote:after {
+    //     content: "\201D"; /* Closing quote */
+    //     position: absolute;
+    //     bottom: 0;
+    //     right: 10px;
+    //     font-size: 4em;
+    //     color: #3498db; /* Change color to suit your theme */
+    //     line-height: 1;
+    // }
+    
+    .wp-block-quote {
+        padding: 1em;
+        margin: 2em 0;
+        border-left: 4px solid #3498db; /* Change color to suit your theme */
+        background-color: #f9f9f9; /* Light grey background */
+        font-style: italic;
+        color: #333;
+        font-size: 1.25em;
+        position: relative;
+    }
+    
+    .wp-block-quote:before {
+        content: "“";
+        position: absolute;
+        font-size: 3em;
+        left: 10px;
+        top: -10px;
+        color: #3498db; /* Change color to suit your theme */
+    }
+    
+    .wp-block-quote:after {
+        content: "”";
+        position: absolute;
+        font-size: 3em;
+        right: 10px;
+        bottom: -10px;
+        color: #3498db; /* Change color to suit your theme */
+    }
+    
+    .wp-block-quote cite {
+        display: block;
+        margin-top: 10px;
+        font-style: normal;
+        font-size: 1em;
+        color: #777;
+        text-align: right;
+    }
+    
+    .wp-block-quote cite:before {
+        content: '— ';
+    }
+    
+  }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
