[prism code block style]

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,8 @@
 // @import url('https://www.codingbites.in/blog/wp-content/themes/lemmony/assets/fonts/jakarta/PlusJakartaSans-SemiBold.woff2');
 // @import url('https://www.codingbites.in/blog/wp-content/themes/lemmony/assets/fonts/jakarta/PlusJakartaSans-Bold.woff2');
 
+@import '~prismjs/themes/prism.css';
+
 body {
   font-family: 'Roboto', sans-serif;
 }
